@@ -1,11 +1,19 @@
 package com.eucl.rw.controller;
 
 import com.eucl.rw.dto.LoginDTO;
+import com.eucl.rw.dto.RefreshTokenDTO;
 import com.eucl.rw.dto.UserRegistrationDTO;
 import com.eucl.rw.enums.ERole;
 import com.eucl.rw.model.User;
 import com.eucl.rw.service.AuthService;
 import com.eucl.rw.service.UserService;
+import com.eucl.rw.response.AuthResponse;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -13,6 +21,7 @@ import java.util.*;
 
 @RestController
 @RequestMapping("/api/auth")
+@Tag(name = "Authentication", description = "Endpoints for user authentication and registration")
 public class AuthController {
 
     private final AuthService authService;
@@ -24,6 +33,12 @@ public class AuthController {
     }
 
     @PostMapping("/register")
+    @Operation(summary = "Register a new user", description = "Registers a new user with default ROLE_CUSTOMER")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "User registered successfully", content = @Content(schema = @Schema(implementation = Map.class))),
+            @ApiResponse(responseCode = "400", description = "Invalid input data", content = @Content),
+            @ApiResponse(responseCode = "409", description = "User already exists", content = @Content)
+    })
     public ResponseEntity<?> registerUser(@RequestBody UserRegistrationDTO registrationDTO) {
         User user = new User();
         user.setName(registrationDTO.getName());
@@ -33,7 +48,7 @@ public class AuthController {
         user.setPassword(registrationDTO.getPassword());
 
         Set<ERole> roles = new HashSet<>();
-        roles.add(ERole.ROLE_CUSTOMER); // Assign default role
+        roles.add(ERole.ROLE_CUSTOMER);
 
         User registeredUser = userService.registerUser(user, roles);
         return ResponseEntity.ok(Map.of(
@@ -42,23 +57,41 @@ public class AuthController {
     }
 
     @PostMapping("/login")
+    @Operation(summary = "User login", description = "Authenticates a user and returns access and refresh tokens")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully authenticated", content = @Content(schema = @Schema(implementation = AuthResponse.class))),
+            @ApiResponse(responseCode = "401", description = "Invalid credentials", content = @Content)
+    })
     public ResponseEntity<?> authenticateUser(@RequestBody LoginDTO loginDTO) {
-        String token = authService.login(loginDTO.getEmail(), loginDTO.getPassword());
-
-        Map<String, Object> response = new HashMap<>();
-        response.put("token", token);
+        AuthResponse response = authService.login(loginDTO.getEmail(), loginDTO.getPassword());
         return ResponseEntity.ok(response);
     }
 
     @PostMapping("/refresh")
-    public ResponseEntity<?> refreshToken(@RequestHeader("Authorization") String authHeader) {
+    @Operation(summary = "Refresh JWT token", description = "Refreshes an access token using a refresh token")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Token refreshed successfully", content = @Content(schema = @Schema(implementation = AuthResponse.class))),
+            @ApiResponse(responseCode = "400", description = "Invalid or missing refresh token", content = @Content),
+            @ApiResponse(responseCode = "401", description = "Invalid or expired refresh token", content = @Content)
+    })
+    public ResponseEntity<?> refreshToken(@RequestBody RefreshTokenDTO refreshTokenRequest) {
+        AuthResponse response = authService.refreshToken(refreshTokenRequest.getRefreshToken());
+        return ResponseEntity.ok(response);
+    }
+
+    @PostMapping("/logout")
+    @Operation(summary = "Logout user", description = "Invalidates the access token")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully logged out", content = @Content),
+            @ApiResponse(responseCode = "400", description = "Invalid or missing Authorization header", content = @Content),
+            @ApiResponse(responseCode = "401", description = "Invalid or expired token", content = @Content)
+    })
+    public ResponseEntity<?> logout(@RequestHeader("Authorization") String authHeader) {
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             return ResponseEntity.badRequest().body("Invalid Authorization header");
         }
-
         String token = authHeader.substring(7);
-        String newToken = authService.refreshToken(token);
-
-        return ResponseEntity.ok(Collections.singletonMap("token", newToken));
+        authService.logout(token);
+        return ResponseEntity.ok(Map.of("message", "Successfully logged out"));
     }
 }
